--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.google.com/');
+@font-face {
+    font-family: 'Lastica';
+    src: url(FontsFree-Net-Lastica.ttf);
+}
+
 *{
     background: rgb(97,7,83);
     background: linear-gradient(140deg, rgba(97,7,83,1) 0%, rgba(44,30,74,1) 37%, rgba(42,29,72,1) 81%, rgba(52,30,77,1) 97%, rgba(2,0,36,1) 99%);
@@ -6,19 +11,111 @@
     background-attachment: fixed;
     margin: 0px;
     padding:0px;
+    color:white;
+    box-sizing: border-box;
 }
 
 /* navigation bar  */
-.bar{
+
+.child1 {
+    margin: 20px;
+    padding: 20px;
     display: flex;
     justify-content: space-around;
-    padding: 30px;
-
 }
 
-.link{
+a:hover{
+    text-shadow: 1px 1px 7px white;
+    font-size: large;
+}
 
-    color:white;
+/* Styling for dropdown button - so that there is no dropdown when screen is big */
+.dropdown {
+    display: none;
+}
 
+
+/* 1st Page main content*/
+
+.name{
+    font-family: 'Lastica';
+    font-size: 70px;
+    padding-left:200px;
+    margin-top: 200px;
+}
+
+
+
+.title{
+    padding-left:280px;
+    font-family:monospace;
+    font-size: 45px;
+    margin-top:20px;
+}
+
+
+/* .container1::after{
+    content: "";
+    clear: both;
+    display:block;
+} */
+
+
+/* .col-1 {
+    width: 50%;
+}
+.col-2 {
+    width:30%;
+} */
+
+
+
+@media only screen and (max-width: 600px) {
+    .child1{
+        display:none;
+    }
+    .dropbtn{
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        width: 100px;
+        height:50px; 
+
+    }
+    .parent {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .dropdown {
+        display: block;
+        position: relative;
+        margin: 50px;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        color: white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+/* first page for mobile 
+
+[class*="col-"] {
+    width: 100%;
+} */
 
 }
